<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.ambergautam.fbclone.Terms_Policy">
    <RelativeLayout
        android:id="@+id/rl"
        android:paddingBottom="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <TextView
            android:id="@+id/join"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:text="@string/finish"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/help"
            android:layout_below="@id/join"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/fmsg"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/cont"
            android:layout_below="@id/help"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:text="@string/contacts"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/contmsg"
            android:layout_below="@id/cont"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/cmsg"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/b1"
            android:layout_below="@id/contmsg"
            android:text="Sign Up"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/lightgray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_below="@id/b1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
